@startuml
skinparam dpi 300
allow_mixing

rectangle Application {
    class ApplicationConfig <<ApplicationPath>>
    class Book <<Entity>> {
      - Long id
      - String isbn
      - String author
      - String title
      - Integer year
      - String genre
    }

    class BookRepository <<Transactional>> {
      + findById(Long id): Book
      + findAll(): List<Book>
      + create(Book book): Book
      + update(Book book): Book
      + deleteById(Long id): void
    }

    class BookResource <<Path>> {
      - String isbnPrefix <<ConfigProperty>>
      + findById(Long id): Response
      + findAll(): Response
      + create(Book book): Response
      + update(Book book): Response
      + delete(Long id): Response
    }

    database Postgres
    artifact "application<U+002E>properties" as app
    artifact "import-dev<U+002E>sql" as importdev
    artifact "import-test<U+002E>sql" as importtest
}

rectangle Test {
    class BookResourceTest <<QuarkusTest>>
    database H2
}

BookResource --> BookRepository
BookRepository ..> Book
BookResourceTest ..> BookResource
app -[hidden]-> importdev
importdev -[hidden]-> importtest
importtest -[hidden]-> Postgres
Book -[hidden]-> ApplicationConfig

@enduml
